[package]
name = "feedback-tooltips"
version = "0.1.0"
edition = "2021"
description = "Multi-framework tooltip blueprints for mui-material."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
rustic-ui-material = { path = "../../crates/rustic-ui-material" }
rustic-ui-headless = { path = "../../crates/rustic-ui-headless" }
rustic-ui-styled-engine = { path = "../../crates/rustic-ui-styled-engine" }
rustic-ui-system = { path = "../../crates/rustic-ui-system" }
