[package]
name = "joy-sycamore"
version = "0.1.0"
edition = "2021"
description = "Joy UI workflow demo rendered with Sycamore"
license = "MIT OR Apache-2.0"

[dependencies]
sycamore.workspace = true
wasm-bindgen.workspace = true
joy-workflows-core = { path = "../joy-workflows-core", version = "0.1.0"}
rustic-ui-headless = { path = "../../crates/rustic-ui-headless", version = "0.1.0"}
rustic-ui-joy = { path = "../../crates/rustic-ui-joy", default-features = false, features = ["sycamore"] , version = "0.1.0"}
rustic-ui-system = { path = "../../crates/rustic-ui-system", features = ["sycamore"] , version = "0.1.0"}
tokio = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["HtmlInputElement"] }

[features]
default = ["csr"]
csr = ["web-sys"]
ssr = ["tokio"]
