[package]
name = "joy-workflows-core"
version = "0.1.0"
edition = "2021"
description = "Shared automation-first Joy workflow state used by cross-framework demos"
license = "MIT OR Apache-2.0"

[dependencies]
rustic-ui-headless = { path = "../../crates/rustic-ui-headless" }
rustic-ui-joy = { path = "../../crates/rustic-ui-joy", default-features = false }
rustic-ui-system = { path = "../../crates/rustic-ui-system" }

[features]
default = []
