[package]
name = "joy-yew"
version = "0.1.0"
edition = "2021"
description = "Joy UI workflow demo rendered with Yew"
license = "MIT OR Apache-2.0"

[dependencies]
yew.workspace = true
wasm-bindgen.workspace = true
mui-system = { path = "../../crates/rustic-ui-system", features = ["yew"] }
mui-joy = { path = "../../crates/rustic-ui-joy", features = ["yew"] }
joy-workflows-core = { path = "../joy-workflows-core" }
tokio = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["HtmlInputElement"] }

[features]
default = ["csr"]
csr = ["web-sys"]
ssr = ["tokio"]
