[package]
name = "mui-dioxus-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus.workspace = true
dioxus-web.workspace = true
mui-system = { path = "../../crates/mui-system", features = ["dioxus"] }
dioxus-ssr = { workspace = true, optional = true }

[features]
default = ["csr"]
csr = []
ssr = ["dioxus-ssr"]
